tests/negative/typecheck/args-named-annot.orng
fn main() -> Int {
    let x: (a: Int) = (.a = 4, .b = 4)
    0
}